Fixed panel heading height (and tab spacing).
Closes #78

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -5,35 +5,32 @@
 /* collapsable panels */
 .clickable
 {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .clickable .glyphicon
 {
-    background: rgba(0, 0, 0, 0.15);
-    display: inline-block;
-    padding: 6px 12px;
-    border-radius: 4px
+  background: rgba(0, 0, 0, 0.15);
+  display: inline-block;
+  padding: 6px 12px;
+  border-radius: 4px
 }
 
-.panel-heading
-{
-    margin-bottom: -.5em;
-}
 a.clickable { color: inherit; }
 a.clickable:hover { text-decoration:none; }
 
+
 /* task list */
 .state-icon {
-    left: -5px;
+  left: -5px;
 }
 
 .project-panel-title {
-    line-height: 1em;
+  line-height: 1em;
 }
 
 .project-customer-title {
-    font-size: .8em;
-    margin-top: -1.5em;
-    text-indent: 1em;
+  font-size: .8em;
+  margin-top: -1.5em;
+  text-indent: 1em;
 }
